--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                   <a class="nav-link" href="projects.html">Projects</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="resume.html">Resume</a>
+                    </li>
+                  <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Me</a>
                   </li>
               </ul>
@@ -72,11 +75,23 @@
             <p>
               My name is Jeff Clegg and I am 48 years old.  I was born and raised in Toledo, Ohio and now reside in Livonia, Michigan.  I have been married
               to my wife Heather for 18 years an we have two sons.  Kellan is 17 and Keaton is 13 years of age.  I went to high school
-              at Whitmer in Toledo.  I graduated from the University of Toledo with a Bachelor's degree in Construction Engineering.  In my spare time I enjoy watching both
-              my sons play soccer throughout the year for their respected clubs and high school.  I also like to travel the country with my family. Where we hike, white water raft and other
-              outdoor activities.  I am attending this bootcamp so I can have a change in occupation as well as the fact that I have always had a interest
-              in computers and coding.
+              at Whitmer in Toledo.  I graduated from the University of Toledo with a Bachelor's degree in Construction Engineering and a associates degeree in
+              Architectural Technology.  I am currently pursuing my certificate in coding thru Michigan State University.
+                          </p>
+            
+            <p>I have 22+ years as CAD Manager as well as a CAD Technician in the architectural and manufacturing sectors.  
             </p>
+
+            <p class="about">I am interested in learning about new opportunities and can
+              be reached
+              through this portfolio, by
+              email:
+              <a href="jeffclegg@att.net"
+                  target="_blank">jeffclegg@att.net, </a> through<a
+                  href="https://github.com/JC72"> GitHub</a>, or through <a
+                  href="https://www.linkedin.com/in/jeffrey-clegg-3058461b0/">
+                  LinkedIn.</a>
+              </p>
 
           </div>
 
@@ -87,7 +102,7 @@
       <br>
 
       <!--Footer generated-->
-      <footer class="footer">
+      <!-- <footer class="footer">
         <img src="Assets/images/keyboard.jpg" alt="keyboard" class="img" id="footerImg">
         <div class="container">
             <div class = "row">
@@ -97,7 +112,7 @@
               </div>
             </div>
         </div>
-      </footer> 
+      </footer>  -->
     
 
 <!--Jquery-->
