--- a/projects.html
+++ b/projects.html
@@ -40,8 +40,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                  <a class="nav-link" href="index.html">About</a>
+                  <a class="nav-link" href="index.html">Home</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
+                    </li>
                   <li class="nav-item">
                   <a class="nav-link" href="projects.html">Projects</a>
                   </li>
