--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                  <a class="nav-link" href="index.html">About</a>
+                  <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
                   <a class="nav-link" href="projects.html">Projects</a>
