--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
             <p id = "about">
               My name is Jeff Clegg and I am 48 years old.  I was born and raised in Toledo, Ohio and now reside in Livonia, Michigan.  I have been married
-              to my wife Heather for 18 years an we have two sons.  Kellan is 17 and Keaton is 13 years of age.  
+              to my wife Heather for 18 years and we have two sons.  Kellan is 17 and Keaton is 13 years of age.  
             </p>
             
             <p id = "about">I went to high school at Whitmer in Toledo, Ohio.  Then attended and graduated from the University of Toledo with a Bachelor's degree in Construction Engineering and a associates degeree in
