--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                   <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                  <a class="nav-link" href="index.html">About</a>
+                  <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
                   <a class="nav-link" href="projects.html">Projects</a>
@@ -71,7 +71,7 @@
 
                 <div class="contact-card">
 
-                    <h4 class="contactLabel">Contact Me</h4>
+                    <h3 class="contactLabel">Contact Me</h3>
                     <ul>
                     
                       <li>
