Added buttons to Home Page and styled

--- a/index.html
+++ b/index.html
@@ -80,35 +80,28 @@
           <!--first row and 2 columns to store pictures-->
         <section id = "paragraph" class = "row justify-content-center">
 
-          <div id = "directCards" class ="col md-12">
+          <a class = "btn btn-light" id="btnAbout" href = "about.html" role = "button"><i id = "about" class="fa fa-user-alt"></i>
+          <h5 class =  "center">About Me</h5>
+          Learn a little about me personally and professionally
+          </button></a>
 
-          <!--Paragraph on a little about me-->
-            <div id = "indCard" class="col-md-2">
-                <div class = "dirCards">
-                  <a href = "about.html"><i class = "fa fa-user-alt"></i></a>
-                  <h5 class = "center">
-                    <a href = "about.html">About</a>
-                  </h5>
-                </div>      
-            </div>
+          <a class = "btn btn-light" id="btnProject" href = "projects.html" role = "button"><i id = "project" class="fa fa-images"></i>
+            <h5 class =  "center">Projects</h5>
+            Feel free to view and demonstrate projects and applications I've developed or
+                    collaborated on         
+            </button></a>
 
-            <div id = "indCard" class="col-md-2">
-              <div class = "dirCards">
-                <a href = "projects.html"><i class = "fa fa-user-alt"></i></a>
-              </div>      
-          </div>
+            <a class = "btn btn-light" id="btnResume" href = "resume.html" role = "button"><i id = "resume" class="fa fa-file-pdf"></i>
+              <h5 class =  "center">Resume</h5>
+              Here are my skills and work history       
+              </button></a>
 
-          <div id = "indCard" class="col-md-2">
-            <div class = "dirCards">
-              <a href = "resume.html"><i class = "fa fa-user-alt"></i></a>
-            </div>      
-        </div>
-        <div id = "indCard" class="col-md-2">
-          <div class = "dirCards">
-            <a href = "contact.html"><i class = "fa fa-user-alt"></i></a>
-          </div>      
-        </div>
-      </div>
+              <a class = "btn btn-light" id="btnContact" href = "contact.html" role = "button"><i id = "contact" class="fa fa-address-book"></i>
+                <h5 class =  "center">Contact Me</h5>
+                I am interested in connecting with potential employers, clients and professionals in
+                  my field, and learning about new opportunites.         
+                </button></a>
+         
         </section>
 
       </main>
