made some adjustments, modified readme and created screenshots

--- a/projects.html
+++ b/projects.html
@@ -66,11 +66,11 @@
     <section class = "container">
         <header class = "row">
             <article class = "col-md-8">
-                <div class = "page-header1">
-                <h1>Projects</h1>
-                <span id="linktext">All projects are deployed on my personal github page @
-                <a id="githubLink" href = "https://github.com/JC72"><strong>github.com/JC72</strong></a>
-                </span>
+                <div class = "page-header2">
+                <h1 id="title2">Projects</h1>
+                  <span id="linktext">All projects are deployed on my personal github page @
+                  <a id="githubLink" href = "https://github.com/JC72"><strong>github.com/JC72</strong></a>
+                  </span>
                 </div>
             </article>
         </header>
@@ -83,10 +83,6 @@
                 <article class = "col-md-5">
                     <img src = "Assets/images/04CodeQuiz/StartPage.png" alt = "04CodeQuiz" class="img-thumbnail">
                 </article>
-
-                <!-- <article  id ="spacer" class = "col-sm-.25">
-                    
-                </article> -->
 
                 <article id = "projectCard" class = "col-md-7">
                     <h3 class = "ProjectTitle">Coding Quiz</h3>
@@ -173,11 +169,9 @@
                   <h3 class = "ProjectTitle">Brew Hopper</h3>
               
                   <p id = "projectDescriptions">This project was undertaken to create a site to give
-                    the user an experience of taking a quiz of several questions.  In which completing
-                    the quiz it would tell the user if the answer was correct or incorrect.  If incorrect
-                    the quiz then would give the correct answer and move to the next question.  Upon completion
-                    the user would be given their score and allow to enter their name in the high scores
-                    table.
+                    the user an experience of getting their location and then generating a search radius. The application
+                    then pulls up a list of all the local breweries in that search radius and allows the user
+                    to pick out a variety and put their location on the map and generates the fastest routes to those breweries.
                   </p>
 
                   <button class = "btnDeploy" id="btnDeploy1"><i id = "globe" class="fa fa-globe"></i> Visit Website</button>
