--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <header class = "row justify-content-center">
           <div class = "col-md-8">
             <div class = "page-header1">
-              <h1><strong>About Me</strong></h1>
+              <h1 id="title2"><strong>About Me</strong></h1>
             </div>
           </div>
         </header>
