--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      <title>Jeff Clegg|About</title>
+      <title>Jeff Clegg|Home</title>
 
       <!--Bootstrap CSS-->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -77,7 +77,7 @@
           </div>
         </header>
       <hr>
-          <!--first row and 2 columns to store pictures-->
+  
         <section id = "paragraph" class = "row justify-content-center">
 
           <a class = "btn btn-light" id="btnAbout" href = "about.html" role = "button"><i id = "about" class="fa fa-user-alt"></i>
@@ -98,8 +98,8 @@
 
               <a class = "btn btn-light" id="btnContact" href = "contact.html" role = "button"><i id = "contact" class="fa fa-address-book"></i>
                 <h5 class =  "center">Contact Me</h5>
-                I am interested in connecting with potential employers, clients and professionals in
-                  my field, and learning about new opportunites.         
+                I am interested in starting to network with employers and professionals in
+                  my field.         
                 </button></a>
          
         </section>
