Changed Resume and added it to resume.html

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
       <!-- End Nav -->
 
       <div class="iframeContainer">
-        <embed src="Assets/resume/Jeff Clegg Resume.pdf" class="pdfobject" type="application/pdf" style="overflow: auto; width: 100%; height: -webkit-fill-available;">  
+        <embed src="Assets/resume/Jeffrey Clegg Resume.pdf" class="pdfobject" type="application/pdf" style="overflow: auto; width: 100%; height: -webkit-fill-available;">  
         <!-- <iframe class="responsive-iframe" src= "Assets/resume/Jeff Clegg Resume.pdf" allowfullscreen = "" frameborder="0"></iframe> -->
       </embed>
     </div>
