--- a/resume.html
+++ b/resume.html
@@ -59,10 +59,11 @@
       </nav>
       <!-- End Nav -->
 
+      <!-- Container to store pdf copy of resume -->
+
       <div class="iframeContainer">
         <embed src="Assets/resume/Jeffrey Clegg Resume.pdf" class="pdfobject" type="application/pdf" style="overflow: auto; width: 100%; height: -webkit-fill-available;">  
-        <!-- <iframe class="responsive-iframe" src= "Assets/resume/Jeff Clegg Resume.pdf" allowfullscreen = "" frameborder="0"></iframe> -->
-      </embed>
+        </embed>
     </div>
     </div>
     
