Changed resume.html code

--- a/resume.html
+++ b/resume.html
@@ -62,8 +62,8 @@
       <!-- Container to store pdf copy of resume -->
 
       <div class="iframeContainer">
-        <embed src="Assets/resume/Jeffrey Clegg Resume.pdf" class="pdfobject" type="application/pdf" style="overflow: auto; width: 100%; height: -webkit-fill-available;">  
-        </embed>
+        <iframe src="Assets/resume/Jeffrey Clegg Resume.pdf" class="pdfobject" type="application/pdf" style="overflow: auto; width: 100%; height: -webkit-fill-available;">  
+        </iframe>
     </div>
     </div>
     
