--- a/resume.html
+++ b/resume.html
@@ -62,10 +62,15 @@
       <!-- Container to store pdf copy of resume -->
 
       <div class="iframeContainer">
-        <iframe src="Assets/resume/Jeffrey Clegg Resume.pdf" class="pdfobject" type="application/pdf" style="overflow: auto; width: 100%; height: -webkit-fill-available;">  
-        </iframe>
+          <div class="relativeDiv">
+            <object data = "Assets/resume/Jeffrey Clegg Resume.pdf">
+            </object>
+          </div>
+
+        <!-- <iframe src="Assets/resume/Jeffrey Clegg Resume.pdf" class="pdfobject" type="application/pdf" style="overflow: auto; width: 100%; height: -webkit-fill-available;">  
+        </iframe> -->
     </div>
-    </div>
+    <!-- </div> -->
     
       
 
